@@ -72,6 +72,10 @@ void CStructureView::OnUpdate(CProjectView* pSender, LPARAM lHint, LPVOID pHint)
 	{
 		case COutputDoc::hintParsingFinished:
 			{
+				//How many items do we have in this view currently?
+				//If none, i.e. first filled after loading a project, then expand the zeroth level
+				const bool bExpandAll = (GetCount() == 0);
+
 				//-----------------------------------------------------------
 				// remember expanded items
 				CString 			strSelectedItem = GetItemPath( GetSelectedItem() );
@@ -122,8 +126,15 @@ void CStructureView::OnUpdate(CProjectView* pSender, LPARAM lHint, LPVOID pHint)
 
 				//-----------------------------------------------------------
 				//try to expand items
-				ExpandItems( astrExpandedItems );
-				SelectItem( GetItemByPath( strSelectedItem ) );
+				if (!bExpandAll)
+				{
+					ExpandItems( astrExpandedItems );
+					SelectItem( GetItemByPath( strSelectedItem ) );
+				}
+				else
+				{
+					ExpandItemsByLevel(0);
+				}
 			}
 			break;
 	}
